# BLESoilMoistureSensors

./: .gitignore  Cargo.toml  TODO.txt
MoistureSensorBreakout/: .gitignore  MoistureSensorBreakout.kicad_pcb  MoistureSensorBreakout.kicad_prl  MoistureSensorBreakout.kicad_pro  MoistureSensorBreakout.kicad_sch  fp-info-cache
MoistureSensorBreakout/Gerbers/: MoistureSensorBreakout-B_Cu.gbl  MoistureSensorBreakout-B_Mask.gbs  MoistureSensorBreakout-B_Paste.gbp  MoistureSensorBreakout-B_Silkscreen.gbo  MoistureSensorBreakout-Edge_Cuts.gm1  MoistureSensorBreakout-F_Cu.gtl  MoistureSensorBreakout-F_Mask.gts  MoistureSensorBreakout-F_Paste.gtp  MoistureSensorBreakout-F_Silkscreen.gto  MoistureSensorBreakout-NPTH-drl_map.gbr  MoistureSensorBreakout-NPTH.drl  MoistureSensorBreakout-PTH-drl_map.gbr  MoistureSensorBreakout-PTH.drl
SoilSensorFirmware/: Cargo.toml
SoilSensorFirmware/src/: main.rs
SoilSensorHardware/: .gitignore  fp-info-cache  nrf51822.kicad_sym  nrf51x22_qfax_dcdc-cache.kicad_sym  nrf51x22_qfax_dcdc-rescue.lib  nrf51x22_qfax_dcdc.csv  nrf51x22_qfax_dcdc.kicad_pcb  nrf51x22_qfax_dcdc.kicad_prl  nrf51x22_qfax_dcdc.kicad_pro  nrf51x22_qfax_dcdc.kicad_sch  nrf51x22_qfax_dcdc.xml  sym-lib-table
SoilSensorHardware/GerberOutput/: nrf51x22_qfax_dcdc-top-pos.csv
SoilSensorHardware/rescue-backup/: sym-lib-table-2023-04-15-19-09-00
soil_sensor_ble_bridge/: Cargo.toml
soil_sensor_ble_bridge/src/: listener.rs  main.rs  sensor_manager.rs
soil_sensor_common/: Cargo.toml
soil_sensor_common/src/: lib.rs  web.rs
soil_sensor_firmware/: .gitignore  Cargo.toml  README.md  build.rs  memory.x
soil_sensor_firmware/.cargo/: config.toml
soil_sensor_firmware/scripts/: flash_softdevice.sh
soil_sensor_firmware/src/: bluetooth.rs  config.rs  main.rs  measurement.rs  sensor_periph.rs  setup.rs
soil_sensor_server/: .env  Cargo.toml  docker-compose.yml  reset_db.sh
soil_sensor_server/migrations/2023-08-05-221927_create_sensor_readings/: down.sql  up.sql
soil_sensor_server/src/: main.rs  models.rs  schema.rs
soil_sensor_server/src/database/: mod.rs  models.rs  schema.rs
