[package]
name = "soil_sensor_ble_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

btleplug = "0.10.5"
soil_sensor_common = { path = "../soil_sensor_common" }
uuid = "1.3.4"
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread", "sync"]}
futures = "0.3.28"
log = "0.4.19"
pretty_env_logger = "0.5.0"
thiserror = "1.0.40"
