[package]
name = "soil_sensor_ble_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bluer = { version = "0.15.8-pre1", features = ["bluetoothd"] }
soil_sensor_common = { path = "../soil_sensor_common", features = ["full"] }
uuid = "1.3.4"
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread", "sync"]}
futures = "0.3.28"
log = "0.4.19"
pretty_env_logger = "0.5.0"
thiserror = "1.0.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde", "std", "local-offset", "formatting", "parsing"] }
