[package]
name = "soil_sensor_common"
version = "0.1.0"
edition = "2021"

[features]
embedded = ["defmt"]
full = ["std", "serde", "dep:influxdb", "dep:chrono"]
defmt = ["dep:defmt"]
std = []
serde = ["dep:serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3", optional = true }
serde = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }
influxdb = { version = "0.7", features = ["derive"], optional = true}