[package]
name = "soil_sensor_firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror-no-std = "2.0"
# TODO: Update to latest versions and see if it builds
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
# cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.0", features = [ "thumbv7-backend" ] }
# cortex-m-rtic = { version = "^1.0"}

nrf52810-hal = { version = "^0.16", features = ["rt"]}
smbus-pec = "1.0.0"  # Software PEC.
num-traits = { version = "0.2.14", default-features = false, features=["libm"] }  # For float rounding and abs.
# Enhanced Shockburst; ie Nordic's proprietary RF protocol. Fast ramp-up enabled.
#esb = { git = "https://github.com/thalesfragoso/esb", branch = "master", features = ["52810", "fast-ru"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-