[package]
name = "soil_sensor_firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror-no-std = "2.0"
# TODO: Update to latest versions and see if it builds
cortex-m = { version = "0.7" }
# cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
critical-section = "1.1"
rtic = { version = "2.0", features = [ "thumbv7-backend" ] }
rtic-sync = "1.0.1"
rtic-monotonics = { version = "1.0.0", features = ["nrf52810"] }
# cortex-m-rtic = { version = "^1.0"}

nrf52810-hal = { version = "^0.16", features = ["rt"]}
num-traits = { version = "0.2.14", default-features = false, features=["libm"] }  # For float rounding and abs.

nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", features = [
#nrf-softdevice = { path = "../../nrf-softdevice/nrf-softdevice", features = [
    "nightly", "defmt", "nrf52810", "s112", "ble-peripheral", "ble-gatt-server", "ble-gatt-server",
    "critical-section-impl", "usable-from-interrupts"
]}

nrf-softdevice-s112 = { git = "https://github.com/embassy-rs/nrf-softdevice.git" }

futures = { version = "0.3", default-features = false, features = ["async-await"] }
void = { version = "1.0", default-features = false }

soil_sensor_common = { path = "../soil_sensor_common", default-features = false, features = ["defmt"] }

# Enhanced Shockburst; ie Nordic's proprietary RF protocol. Fast ramp-up enabled.
#esb = { git = "https://github.com/thalesfragoso/esb", branch = "master", features = ["52810", "fast-ru"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-