[package]
name = "soil_sensor_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "network-address", "time"] }
diesel-async = { version = "0.4", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
soil_sensor_common = { path = "../soil_sensor_common", features = ["full"] }
dotenvy = "0.15"
time = { version = "0.3", features = ["serde", "std", "local-offset", "formatting", "parsing"] }
rocket = "0.5"
tokio = "1.36"